ISSUE237-group-member-permissions (#260)
* ISSUE237-group-member-permissions

* update test code

* update swagger
